istio-vs-ingress/Istio-vs-ingress/istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: backend-virtualservice-biz-dev
  namespace: istio-system
  resourceVersion: "74182367"
  uid: 3ec10d70-7acd-4e4e-be2d-f90a123b0263
spec:
  gateways:
  - backend-gateway-biz-dev
  hosts:
  - api-oe-biz-dev.xstak.com
  http:
  - match:
    - uri:
        prefix: /oauth
    route:
    - destination:
        host: oauth.biz-dev.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /replenishment
    route:
    - destination:
        host: replenishment.biz-dev.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /cubejs/
    route:
    - destination:
        host: bi-engine.biz-dev.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /dashboard
    route:
    - destination:
        host: dashboard-service.biz-dev.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /datadump/
    route:
    - destination:
        host: orderdump-new.biz-dev.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /inventory/updateQuantityAPI
    - uri:
        prefix: /inventory/updatePriceAPI
    - uri:
        prefix: /inventory/sync_webstore
    - uri:
        prefix: /inventory/
    - uri:
        prefix: /inventory/create_outfinal
    - uri:
        prefix: /excluded/products
    - uri:
        prefix: /inventory/getMasterAndStroreInvDataOnSkuLevel
    - uri:
        regex: /inventory/brand_queue\/[^\/]+
    route:
    - destination:
        host: inventory-service.biz-dev.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /reconcile/
    route:
    - destination:
        host: reconciliation-service.biz-dev.svc.cluster.local
        port:
          number: 80
#  - match:
    - uri:
        regex: /scheduler/get_all\/[^\/]+
    - uri:
        regex: /scheduler\/[^\/]+\/update_job
    - uri:
        regex: /scheduler\/[^\/]+\/update_job_status
    - uri:
        regex: /scheduler\/[^\/]+\/create_markinvzero_job\/[^\/]+
    route:
    - destination:
        host: oe-scheduler-service.biz-dev.svc.cluster.local
        port:
          number: 80
#  - match:
    - uri:
        prefix: /schedulers/
    route:
    - destination:
        host: scheduler-service.biz-dev.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /tracking/courierScheduler
    - uri:
        regex: /track\/[^\/]+\/history\/[^\/]+
    - uri:
        regex: /orders\/[^\/]+\/track
    route:
    - destination:
        host: courier-tracking-service.biz-dev.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /marketing
    route:
    - destination:
        host: rfm-marketing-service.biz-dev.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /shopify-shipping-rates
    route:
    - destination:
        host: shopify-shipping-rates-service.biz-dev.svc.cluster.local
        port:
          number: 3000
  - match:
    - uri:
        prefix: /shopify    
    route:
    - destination:
        host: shopify-service.biz-dev.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /analytics
    route:
    - destination:
        host: analytics-dashboard.biz-dev.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /woocommerce
    route:
    - destination:
        host: oe-woocommerce-service.biz-dev.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /slotting
    route:
    - destination:
        host: oe-slotting-service.biz-dev.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /template-engine
    route:
    - destination:
        host: oe-templating-engine.biz-dev.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /fbr/sync-order
    route:
    - destination:
        host: fbr-integration-service.biz-dev.svc.cluster.local
        port:
          number: 80
#  - match:
    - uri:
        prefix: /shopistanoeadmin
    route:
    - destination:
        host: bootadmin.biz-dev.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /users/
    - uri:
        prefix: /monitoring/
    - uri:
        prefix: /backup/loadBrand
    - uri:
        prefix: /backup/loadBrandChannel
    - uri:
        prefix: /backup/loadLocation
    - uri:
        prefix: /backup/cancellationReason
    - uri:
        prefix: /backup/
    - uri:
        prefix: /orders/getSkuOrderLevelDetail
    - uri:
        prefix: /orders/generateReplenishmentReport
    - uri:
        prefix: /backup/addComment
    - uri:
        prefix: /searchOrdersBySku
    - uri:
        prefix: /backup/addOrderBrandDetails
    route:
    - destination:
        host: order-service.biz-dev.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        regex: /orders\/[^\/]+\/item\/[^\/]+
    - uri:
        regex: /orders\/[^\/]+\/(editbyebm|editbysm)
    - uri:
        regex: /orders\/[^\/]+\/(updateordersm|updateorderebm)
    - uri:
        regex: /orders\/[^\/]+\/split
    - uri:
        regex: /orders\/[^\/]+\/(manualSplit|getManualSplitLocations)
    - uri:
        regex: /orders\/[^\/]+\/addComment
    - uri:
        regex: /orders\/[^\/]+\/updateTag
    - uri:
        regex: /orders\/[^\/]+\/split/reassign
    - uri:
        regex: /orders\/[^\/]+\/getSkuAvailability\/[^\/]+
    - uri:
        regex: /orders\/[^\/]+\/checkStoreQuantity
    - uri:
        regex: /orders\/[^\/]+\/updateeditedorderwithoutinventory
    - uri:
        regex: /orders\/[^\/]+\/splitItemsQuantity
    - uri:
        regex: /orders\/[^\/]+\/getItemSplitLocations
    - uri:
        prefix: /orders/shopify/createEditedOrder
    - uri:
        prefix: /orders/updateOrderSku
    route:
    - destination:
        host: oe-editordertransition-service.biz-dev.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        regex: /orders/crm_searchorders
    - uri:
        regex: /orders/searchOrders
    - uri:
        regex: /orders/orderCount
    - uri:
        regex: /orders\/[^\/]+\/detail
    - uri:
        regex: /orders\/[^\/]+\/crm_detail
    - uri:
        regex: /orders/saleorders
    - uri:
        regex: /orders\/[^\/]+\/getOrderStatus
    - uri:
        regex: /orders\/[^\/]+\/customer_orders
    - uri:
        regex: /orders/batch_process
    - uri:
        regex: /b\/[^\/]+\/product/variant/info
    - uri:
        prefix: /orders/search/v1/customer
    - uri:
        prefix: /orders/search
    route:
    - destination:
        host: oe-searchorder-service.biz-dev.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        regex: /orders\/[^\/]+\/approve
    - uri:
        regex: /orders\/[^\/]+\/pick
    - uri:
        prefix: /orders/approve/bulk
    - uri:
        prefix: /orders/pick/bulk
    - uri:
        prefix: /orders/ack/bulk
    route:
    - destination:
        host: oe-approveordertransition-service.biz-dev.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        regex: /orders\/[^\/]+\/assign\/[^\/]+
    - uri:
        regex: /orders\/[^\/]+\/getlocations
    - uri:
        regex: /orders\/[^\/]+\/reassign
    - uri:
        prefix: /orders/assign/bulk
    - uri:
        prefix: /orders/autoassign/bulk
    - uri:
        regex: /orders/autoassign\/[^\/]+
    - uri:
        regex: /orders\/[^\/]+\/getskusum\/[^\/]+
    route:
    - destination:
        host: oe-assignordertransition-service.biz-dev.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
       prefix: /orders/create
    route:
    - destination:
        host: oe-newordertransition-service.biz-dev.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        regex: /orders\/[^\/]+\/processOrder
    - uri:
        regex: /orders\/[^\/]+\/dispatch
    - uri:
        regex: /orders\/[^\/]+\/deliverOrReturnOrder\/[^\/]+
    - uri:
        prefix: /orders/process/bulk
    - uri:
        prefix: /orders/dispatch/bulk
    - uri:
        prefix: /orders/deliver/bulk
    - uri:
        prefix: /orders/return/bulk
    - uri:
        prefix: /orders/updatestatusapi
    route:
    - destination:
        host: oe-processordertransition-service.biz-dev.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        regex: /orders\/[^\/]+\/reverse_order
    - uri:
        regex: /orders\/[^\/]+\/reverse_dead_order
    - uri:
        regex: /orders\/[^\/]+\/updateOrderCustomerDetail
    - uri:
        regex: /orders\/[^\/]+\/updateOrderItems
    - uri:
        regex: /blackListedCustomer/add
    - uri:
        regex: /blackListedCustomer/disable
    - uri:
        regex: /blackListedCustomer/getAll\/[^\/]+\/[^\/]+\/[^\/]+
    route:
    - destination:
        host: oe-reverseordertransition-service.biz-dev.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        regex: /orders\/[^\/]+\/book\/[^\/]+
    - uri:
        regex: /orders\/[^\/]+\/book/manual\/[^\/]+
    - uri:
        regex: /orders\/[^\/]+\/rebook
    - uri:
        regex: /orders\/[^\/]+\/getcouriers
    - uri:
        regex: /orders/orderBulkAction
    - uri:
        regex: /brands\/[^\/]+\/brandcourier
    - uri:
        regex: /locations\/[^\/]+\/userlocations
    - uri:
        regex: /locations\/[^\/]+\/getUserLocationsWithOutHalt
    - uri:
        prefix: /orders/book/bulk
    - uri:
        regex: /orders/autobook\/[^\/]+
    - uri:
        regex: /channel\/[^\/]+\/getEnabledBrandChannels
    retries:
      attempts: 5
      perTryTimeout: 30s
      retryOn: 5xx,gateway-error,connect-failure,refused-stream
    route:
    - destination:
        host: oe-bookordertransition-service.biz-dev.svc.cluster.local
        port:
          number: 80
    timeout: 300s
  - match:
    - uri:
        regex: /orders\/[^\/]+\/(manualverify|autoverify|ivrverify)
    - uri:
        prefix: /orders/verify/bulk
    - uri:
        prefix: /orders/localcities
    - uri:
        prefix: /orders/localcities
    route:
    - destination:
        host: oe-verifyordertransition-service.biz-dev.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        regex: /orders\/[^\/]+\/dead
    - uri:
        regex: /orders\/[^\/]+\/deadOrder
    - uri:
        regex: /orders\/[^\/]+\/cancelbyebm
    - uri:
        regex: /orders\/[^\/]+\/cancelbysm
    - uri:
        regex: /orders\/[^\/]+\/completeOrder
    - uri:
        regex: /orders\/[^\/]+\/closeOrder
    - uri:
        prefix: /orders/close/bulk
    - uri:
        prefix: /orders/complete/bulk
    - uri:
        prefix: /orders/cancelbyebm/bulk
    - uri:
        prefix: /orders/cancelbysm/bulk
    - uri:
        prefix: /orders/cancel/bulk
    route:
    - destination:
        host: oe-finalstatetransition-service.biz-dev.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /omniLocationsUnassignedskuOrdersReport
    - uri:
        prefix: /orders/get_items_sales_dump
    - uri:
        regex: /unassignedskuOrdersReport\/[^\/]+
    - uri:
        regex: /orders/generateDuplicateOrderList\/[^\/]+
    - uri:
        regex: /courier\/[^\/]+\/limits\/get
    - uri:
        regex: /orders\/[^\/]+\/download\/SingleOrderFileAndDispatchNote
    - uri:
        regex: /orders/generateLocationAvailabilityReport\/[^\/]+\/[^\/]+
    - uri:
        prefix: /orders/generateOrderList
    - uri:
        prefix: /orders/generatePickList
    - uri:
        prefix: /orders/download/generateDispatchNote
    - uri:
        regex: /orders\/generateBulkFile\/[^\/]+\/[^\/]+\/[^\/]+\/[^\/]+
    - uri:
        regex: /orders/generateFinalStatusFile\/[^\/]+\/[^\/]+\/[^\/]+\/[^\/]+\/[^\/]+
    - uri:
        regex: /orders/download/BulkOrderFileAndDispatchNote\/[^\/]+\/[^\/]+\/[^\/]+\/[^\/]+
    - uri:
        prefix: /orders/generatePackagingSlip
    - uri:
        prefix: /orders/uploadbulkactionfile
    - uri:
        prefix: /orders/get_items_sales_report
    - uri:
        prefix: /adjustStoreInventory
    - uri:
        regex: /orders/skuOrdersReport
    - uri:
        regex: /orders/pick/report
    - uri:
        regex: /orders/fbr/report
    - uri:
        prefix: /orders/reports/return
    - uri:
        prefix: /orders/reports/v1/return
    - uri:
        prefix: /orders/reports/v1/transaction
    - uri:
        prefix: /orders/refund/report
    - uri:
        regex: /orders/reports/v1/review\/[^\/]+
    - uri:
        regex: /orders/reports/v1/outofstock\/[^\/]+\/[^\/]+
    - uri:
        prefix: /orders/allocation
    - uri:
        regex: /orders/reports/v1/financialinformation\/[^\/]+
    route:
    - destination:
        host: oe-reports-service.biz-dev.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        regex: /orders/monitoring\/[^\/]+\/[^\/]+
    - uri:
        prefix: /currency/getCurrencies
    - uri:
        prefix: /orders/checkOrderAvailability
    - uri:
        regex: /orders\/[^\/]+\/updateOrderBrandDetails
    - uri:
        prefix: /orders/pos
    route:
    - destination:
        host: oe-posmonitoring.biz-dev.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /configs
    route:
    - destination:
        host: oe-onboarding-service-new.biz-dev.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /onboard
    route:
    - destination:
        host: oe-onboarding-service.biz-dev.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /slotting
    route:
    - destination:
        host: oe-slotting-service.biz-dev.svc.cluster.local
        port:
          number: 80
#  - match:
    - uri:
        prefix: /redis/load/brandinfo
    - uri:
        prefix: /redis/
    route:
    - destination:
        host: oe-redisclient-service.biz-dev.svc.cluster.local
        port:
          number: 80
 # - match:
    - uri:
        prefix: /oe-adapter/technosys
    route:
    - destination:
        host: walkeaze-oe-adapter.biz-dev.svc.cluster.local
        port:
          number: 80
